Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h3>
 <a id="my-resume" class="anchor" href="#my-resume" aria-hidden="true"><span class="octicon octicon-link"></span></a>My resume</h3>
 
-<p><a href="pdfs/filename.pdf">Résumé</a></p>
+<p><a href="Vincent_Escueta_resume.pdf">Résumé</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/vincent-escueta22/Website">Vincent Escueta</a> is maintained by <a href="https://github.com/vincent-escueta22">vincent-escueta22</a>.</span>
