Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
 
 <p><a href="Vincent_Escueta_resume.pdf">Résumé</a></p>
 
+<h3>
+<a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact Me</h3>
+
+<p><a href="vincent.escueta22@berkeley.edu">Email</a> 
+<a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic">LinkedIn</a>
+<a href="https://github.com/vincent-escueta22">GitHub</a>
+<a href="https://www.facebook.com/vincent.escueta22">Facebook</a></p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/vincent-escueta22/Website">Vincent Escueta</a> is maintained by <a href="https://github.com/vincent-escueta22">vincent-escueta22</a>.</span>
 
