--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
       <h1 align="center">
 <a id="-about-me-" class="anchor" href="#-about-me-" aria-hidden="true"><span class="octicon octicon-link"></span></a> About Me </h1>
 
-<p align="center"> <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true">
+<p align="center"> <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true"> </p>
 
+<p align="center">
 Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science and focus on computer graphics and animation. All my technical skills are in my resume below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshop pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures. </p>
 
 <h1 align="center">
 <a id="-my-résumé-" class="anchor" href="#-my-r%C3%A9sum%C3%A9-" aria-hidden="true"><span class="octicon octicon-link"></span></a> My Résumé </h1>
 
-<p><a href="Vincent_Escueta_resume.pdf" align="center">Résumé</a></p>
+<p align="center">
+<a href="Vincent_Escueta_resume.pdf">Résumé</a> </p>
 
 <h1 align="center">
 <a id="-contact-me-" class="anchor" href="#-contact-me-" aria-hidden="true"><span class="octicon octicon-link"></span></a> Contact Me </h1>
