--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Hi! I am Vincent Escueta and I currently am a sophomore at the University of Cal
 <a id="-my-résumé-" class="anchor" href="#-my-r%C3%A9sum%C3%A9-" aria-hidden="true"><span class="octicon octicon-link"></span></a> My Résumé </h1>
 
 <p align="center">
-<a href="Vincent_Escueta_resume.pdf">Résumé</a> </p>
+<a href="Vincent_Escueta_resume.pdf">Download</a> </p>
 
 <h1 align="center">
 <a id="-contact-me-" class="anchor" href="#-contact-me-" aria-hidden="true"><span class="octicon octicon-link"></span></a> Contact Me </h1>
