Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@ Hi! I am Vincent Escueta and I currently am a sophomore at the University of Cal
 ●
 <a href="https://www.facebook.com/vincent.escueta22">Facebook</a> </p>
 
+<p align="center"> Last Edited: January 14, 2016 </p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/vincent-escueta22/Website">Vincent Escueta</a> is maintained by <a href="https://github.com/vincent-escueta22">vincent-escueta22</a>.</span>
 
