--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <section class="page-header">
       <h1 class="project-name">Vincent Escueta</h1>
       <h2 class="project-tagline">Computer Scientist, UC Berkeley EECS Undergrad</h2>
-      <section class="about-me">
       <h1 align="center">
 <a id="-about-me-" class="anchor" href="#-about-me-" aria-hidden="true"><span class="octicon octicon-link"></span></a> About Me </h1>
 
@@ -24,7 +23,8 @@
 Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science and focus on computer graphics and animation. All my technical skills are in my resume below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshop pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures. </p>
     </section>
 
-    <section class="contact-me">
+    <section class="main-content">
+      
 
 <h1 align="center">
 <a id="-my-résumé-" class="anchor" href="#-my-r%C3%A9sum%C3%A9-" aria-hidden="true"><span class="octicon octicon-link"></span></a> My Résumé </h1>
