--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
   </head>
   <body>
     <section class="page-header">
@@ -20,7 +20,7 @@
 <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="319.33" height="379.33"> </p>
 
 <p align="center">
-Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science and focus on computer graphics and animation. All my technical skills are in my resume below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures.1 </p>
+Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science and focus on computer graphics and animation. All my technical skills are in my resume below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures. </p>
     </section>
 
     <section class="main-content">
