--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
 <p align="center"> 
 <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="319.33" height="379.33"> </p>
 
-<p align="center">
-Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science and focus on computer graphics and animation. All my technical skills are in my resume below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures. </p>
     </section>
 
     <section class="main-content">
       
-
+<p align="center">
+Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science and focus on computer graphics and animation. All my technical skills are in my resume below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshoppinh pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures. </p>
 <h1 align="center">
 <a id="-my-résumé-" class="anchor" href="#-my-r%C3%A9sum%C3%A9-" aria-hidden="true"><span class="octicon octicon-link"></span></a> My Résumé </h1>
 
@@ -46,7 +45,7 @@ Hi! I am Vincent Escueta and I currently am a sophomore at the University of Cal
 
 <p align="center"> Last Edited: January 16, 2016 </p>
 
-    </section>
+</section>
 
   
   </body>
