--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
          <h1 align="center">
 <a id="-about-me-" class="anchor" href="#-about-me-" aria-hidden="true"><span class="octicon octicon-link"></span></a> About Me </h1>   
 <p align="center">
-Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science and focus on computer graphics and animation. All my technical skills are in my resume below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshoppinh pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures. </p>
+Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science and focus on computer graphics and animation. All my technical skills are in my resume below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshoppinh pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures. 123</p>
 
 </section>
 <section class="resume">
