--- a/index.html
+++ b/index.html
@@ -1,54 +1,40 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="UTF-8">
-    <title>Vincent Escueta by vincent-escueta22</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <section class="page-header">
-      <h1 class="project-name">Vincent Escueta</h1>
-      <p align="center"> 
-<img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="319.33" height="379.33"> </p>
-      <h2 class="project-tagline">Computer Scientist, UC Berkeley EECS Undergrad</h2>
-
-    </section>
-
-    <section class="about-me">
-         <h1 align="center">
-<a id="-about-me-" class="anchor" href="#-about-me-" aria-hidden="true"><span class="octicon octicon-link"></span></a> About Me </h1>   
-<p align="center">
-Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science and focus on computer graphics and animation. All my technical skills are in my resume below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, growing in my Christian faith, and going on spontaneous adventures.</p>
-
-</section>
-<section class="resume">
-<h1 align="center">
-<a id="-my-résumé-" class="anchor" href="#-my-r%C3%A9sum%C3%A9-" aria-hidden="true"><span class="octicon octicon-link"></span></a> My Résumé </h1>
-
-<p align="center">
-<a href="Vincent_Escueta_resume.pdf">Download</a> </p>
-
-<section class="contact-me">
-<h1 align="center">
-<a id="-contact-me-" class="anchor" href="#-contact-me-" aria-hidden="true"><span class="octicon octicon-link"></span></a> Contact Me </h1>
-
-<p align="center">
-<a href="vincent.escueta22@berkeley.edu" align="center">Email</a> 
-●
-<a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic">LinkedIn</a>
-●
-<a href="https://github.com/vincent-escueta22">GitHub</a>
-●
-<a href="https://www.facebook.com/vincent.escueta22">Facebook</a> </p>
-
-<p align="center"> Last Edited: January 17, 2016</p>
-
-</section>
-
-  
+    <div class="nav">
+      <ul class="pull-left">
+        <li>Vincent Escueta</li>
+      </ul>
+      <ul class="nav-pills pull-right">
+        <li>About Me</li>
+        <li>Résumé</li>
+        <li>Contact Me</li>
+      </ul>
+    <div class="title">
+      <h1>Vincent Escueta</h1>
+      <p>Computer Scientist, UC Berkeley EECS Undergrad</p>
+    </div>
+     <div class="about-me">
+      <h1>About Me</h1>
+      <p>Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science and focus on computer graphics and animation. All my technical skills are in my resume below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, growing in my Christian faith, and going on spontaneous adventures.</p>
+    </div>
+    <div class="resume">
+      <h1>My Résumé</h1>
+      <p><a href="Vincent_Escueta_resume.pdf">Download</a> </p>
+    </div>
+    <div class="contact-me">
+      <h1>Contact Me</h1>
+      <ul class="nav nav-tabs">
+        <li><a href="vincent.escueta22@berkeley.edu">Email</a></li>
+        <li><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic">LinkedIn</a></li>
+        <li><a href="https://github.com/vincent-escueta22">GitHub</a></li>
+        <li><a href="https://www.facebook.com/vincent.escueta22">Facebook</a></li>
+      </ul>
+      <p align="center">Last Edited: January 18, 2016</p>
+    </div>
+<!-- <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="319.33" height="379.33"> </p> -->
   </body>
 </html>
