new website, new me

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <link rel="stylesheet" href="bootsrap.css"
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
@@ -9,9 +10,9 @@
         <li>Vincent Escueta</li>
       </ul>
       <ul class="nav-pills pull-right">
-        <li>About Me</li>
-        <li>Résumé</li>
-        <li>Contact Me</li>
+        <li class="nav-item">About Me</li>
+        <li class="nav-item">Résumé</li>
+        <li class="nav-item">Contact Me</li>
       </ul>
     <div class="title">
       <h1>Vincent Escueta</h1>
@@ -28,10 +29,10 @@
     <div class="contact-me">
       <h1>Contact Me</h1>
       <ul class="nav nav-tabs">
-        <li><a href="vincent.escueta22@berkeley.edu">Email</a></li>
-        <li><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic">LinkedIn</a></li>
-        <li><a href="https://github.com/vincent-escueta22">GitHub</a></li>
-        <li><a href="https://www.facebook.com/vincent.escueta22">Facebook</a></li>
+        <li class="nav-item"><a href="vincent.escueta22@berkeley.edu">Email</a></li>
+        <li class="nav-item"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic">LinkedIn</a></li>
+        <li class="nav-item"><a href="https://github.com/vincent-escueta22">GitHub</a></li>
+        <li class="nav-item"><a href="https://www.facebook.com/vincent.escueta22">Facebook</a></li>
       </ul>
       <p align="center">Last Edited: January 18, 2016</p>
     </div>
