--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <li>Vincent Escueta</li>
       </ul>
       <ul class="nav-pills pull-right">
-        <li class="nav-item">About Me</li>
-        <li class="nav-item">Résumé</li>
-        <li class="nav-item">Contact Me</li>
+        <li class="nav-item"><li class="nav-item"><a href="#">About Me</li>
+        <li class="nav-item"><a href="#">Résumé</li>
+        <li class="nav-item"><a href="#">Contact Me</li>
       </ul>
     <div class="title">
       <h1>Vincent Escueta</h1>
