--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li class="nav-item"><a href="#">Résumé</li>
         <li class="nav-item"><a href="#">Contact Me</li>
       </ul>
+    </div>
     <div class="title">
       <h1>Vincent Escueta</h1>
       <p>Computer Scientist, UC Berkeley EECS Undergrad</p>
