--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <li>Vincent Escueta</li>
       </ul>
       <ul class="nav-pills pull-right">
-        <li class="nav-item"><a href="#">About Me</li>
-        <li class="nav-item"><a href="#">Résumé</li>
-        <li class="nav-item"><a href="#">Contact Me</li>
+        <li class="nav-item"><a href="#">About Me</a></li>
+        <li class="nav-item"><a href="#">Résumé</a></li>
+        <li class="nav-item"><a href="#">Contact Me</a></li>
       </ul>
     </div>
     <div class="title">
