new website, new me

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     </div>
     <div class="resume">
       <h1>My Résumé</h1>
-      <p><a href="Vincent_Escueta_resume.pdf">Download</a> </p>
+      <ul class="nav nav-tabs">
+        <li class="nav-item"><a href="Vincent_Escueta_resume.pdf">Download</a> </li>
+      </ul>
     </div>
     <div class="contact-me">
       <h1>Contact Me</h1>
