--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <link rel="stylesheet" href="bootsrap.css">
+    <link rel="stylesheet" href="css/bootsrap.css">
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
