new website, new me

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
       </ul>
     </div>
     <div class="title">
-      <h1>Vincent Escueta</h1>
-      <p>Computer Scientist, UC Berkeley EECS Undergrad</p>
+      <div class="container">
+        <h1>Vincent Escueta</h1>
+        <p>Computer Scientist, UC Berkeley EECS Undergrad</p>
+      </div>
     </div>
      <div class="about-me">
       <h1>About Me</h1>
