--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/bootsrap.css">
     <link rel="stylesheet" href="main.css">
   </head>
-  <body>
+  <body align="center">
     <div class="nav">
       <ul class="pull-left">
         <li>Vincent Escueta</li>
