--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
   </head>
   <body align="center">
     <div class="nav">
-      <ul class="pull-left">
-        <li>Vincent Escueta</li>
-      </ul>
-      <ul class="nav-pills pull-right">
-        <li class="nav-item"><a href="#">About Me</a></li>
-        <li class="nav-item"><a href="#">Résumé</a></li>
-        <li class="nav-item"><a href="#">Contact Me</a></li>
-      </ul>
+      <div class="container">
+        <ul class="pull-left">
+          <li>Vincent Escueta</li>
+        </ul>
+        <ul class="nav-pills pull-right">
+          <li class="nav-item"><a href="#">About Me</a></li>
+          <li class="nav-item"><a href="#">Résumé</a></li>
+          <li class="nav-item"><a href="#">Contact Me</a></li>
+        </ul>
+      </div>
     </div>
     <div class="title">
       <div class="container">
