--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <basefont color="#ffffff">
     <link rel="stylesheet" href="css/bootsrap.css">
     <link rel="stylesheet" href="main.css">
   </head>
-  <body align="center">
+  <body align="center" bgcolor="#000000">
     <div class="nav">
       <div class="container">
         <ul class="pull-left">
