new website, new me

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <li class="nav-item"><a href="https://github.com/vincent-escueta22">GitHub</a></li>
         <li class="nav-item"><a href="https://www.facebook.com/vincent.escueta22">Facebook</a></li>
       </ul>
-      <p align="center">Last Edited: January 18, 2016</p>
+      <p align="center">Last Edited: January 18, 2016 9:19pm</p>
     </div>
 <!-- <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="319.33" height="379.33"> </p> -->
   </body>
