--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
   </head>
-  <body align="center" bgcolor="#000000">
+  <body align="center">
     <div class="nav">
       <div class="container">
         <ul class="pull-left">
