--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
   </head>
-  <body align="center">
+  <body>
     <div class="nav">
       <div class="container">
         <ul class="pull-left">
@@ -41,7 +41,7 @@
         <li class="nav-item"><a href="https://github.com/vincent-escueta22">GitHub</a></li>
         <li class="nav-item"><a href="https://www.facebook.com/vincent.escueta22">Facebook</a></li>
       </ul>
-      <p align="center">Last Edited: January 18, 2016 9:35pm</p>
+      <p>Last Edited: January 18, 2016 9:35pm</p>
     </div>
 <!-- <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="319.33" height="379.33"> </p> -->
   </body>
