--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul class="pull-left">
           <li>Vincent Escueta</li>
         </ul>
-        <ul class="nav-pills pull-right">
+        <ul class="pull-right">
           <li class="nav-item"><a href="#">About Me</a></li>
           <li class="nav-item"><a href="#">Résumé</a></li>
           <li class="nav-item"><a href="#">Contact Me</a></li>
