--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Vincent Escueta by vincent-escueta22</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
@@ -13,7 +13,7 @@
         <ul class="pull-left">
           <li>Vincent Escueta</li>
         </ul>
-        <ul class="pull-right">
+        <ul class="nav-pills pull-right">
           <li class="nav-item"><a href="#">About Me</a></li>
           <li class="nav-item"><a href="#">Résumé</a></li>
           <li class="nav-item"><a href="#">Contact Me</a></li>
