--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <div class="nav">
+    <div class="nav navbar-fixed-top">
       <div class="container">
         <ul class="pull-left">
           <li>Vincent Escueta</li>
