new website, new me

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
           <li>Vincent Escueta</li>
         </ul>
         <ul class="nav-pills pull-right">
-          <li class="nav-item"><a href="#">About Me</a></li>
-          <li class="nav-item"><a href="#">Résumé</a></li>
-          <li class="nav-item"><a href="#">Contact Me</a></li>
+          <li class="nav-item"><a href="#about-me">About Me</a></li>
+          <li class="nav-item"><a href="#resume">Résumé</a></li>
+          <li class="nav-item"><a href="#contact-me">Contact Me</a></li>
         </ul>
       </div>
     </div>
@@ -26,26 +26,37 @@
         <p>Computer Scientist, UC Berkeley EECS Undergrad</p>
       </div>
     </div>
+    <section id="about-me">
      <div class="about-me">
       <h1>About Me</h1>
       <p>Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science and focus on computer graphics and animation. All my technical skills are in my resume below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, growing in my Christian faith, and going on spontaneous adventures.</p>
-    </div>
-    <div class="resume">
-      <h1>My Résumé</h1>
-      <ul class="nav nav-tabs">
-        <li class="nav-item"><a href="Vincent_Escueta_resume.pdf">Download</a> </li>
-      </ul>
-    </div>
-    <div class="contact-me">
-      <h1>Contact Me</h1>
-      <ul class="nav nav-tabs">
-        <li class="nav-item"><a href="vincent.escueta22@berkeley.edu">Email</a></li>
-        <li class="nav-item"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic">LinkedIn</a></li>
-        <li class="nav-item"><a href="https://github.com/vincent-escueta22">GitHub</a></li>
-        <li class="nav-item"><a href="https://www.facebook.com/vincent.escueta22">Facebook</a></li>
-      </ul>
-      <p>Last Edited: January 18, 2016 9:35pm</p>
-    </div>
+      </div>
+    </section>
+    <section id="resume">
+      <div class="resume">
+        <h1>My Résumé</h1>
+        <ul class="nav-tabs">
+          <li class="nav-item"><a href="Vincent_Escueta_resume.pdf">Download</a> </li>
+        </ul>
+      </div>
+    </section>
+    <section id="contact-me">
+      <div class="contact-me">
+        <h1>Contact Me</h1>
+        <ul class="nav-tabs">
+          <li class="nav-item"><a href="vincent.escueta22@berkeley.edu">Email</a></li>
+          <li class="nav-item"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic">LinkedIn</a></li>
+          <li class="nav-item"><a href="https://github.com/vincent-escueta22">GitHub</a></li>
+          <li class="nav-item"><a href="https://www.facebook.com/vincent.escueta22">Facebook</a></li>
+        </ul>
+        <p>Last Edited: January 18, 2016 9:35pm</p>
+      </div>
+    </section>
 <!-- <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="319.33" height="379.33"> </p> -->
   </body>
 </html>
+
+<!-- #f0eceb gray
+#729f98 blue
+#283018 green
+#aa863a brown-->
