new website, new me

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <div class="nav navbar-fixed-top">
+    <div class="navbar navbar-custom navbar-fixed-top" role="navigation">
       <div class="container">
-        <ul class="pull-left">
+        <ul class="navbar-header"> 
           <li>Vincent Escueta</li>
         </ul>
-        <ul class="nav-pills pull-right">
+        <ul class="collapse navbar-collapse navbar-right navbar-main-collapse">
           <li class="nav-item"><a href="#about-me">About Me</a></li>
           <li class="nav-item"><a href="#resume">Résumé</a></li>
           <li class="nav-item"><a href="#contact-me">Contact Me</a></li>
