--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
   <body>
     <div class="navbar navbar-custom navbar-fixed-top" role="navigation">
       <div class="container">
-        <ul class="navbar-header"> 
-          <li>Vincent Escueta</li>
-        </ul>
-        <ul class="collapse navbar-collapse navbar-right navbar-main-collapse">
-          <li class="nav-item"><a href="#about-me">About Me</a></li>
-          <li class="nav-item"><a href="#resume">Résumé</a></li>
-          <li class="nav-item"><a href="#contact-me">Contact Me</a></li>
-        </ul>
+        <div class="navbar-header"> 
+          <p>Vincent Escueta</p>
+        </div>
+        <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+          <ul class="nav navbar-nav">
+            <li class="nav-item"><a href="#about-me">About Me</a></li>
+            <li class="nav-item"><a href="#resume">Résumé</a></li>
+            <li class="nav-item"><a href="#contact-me">Contact Me</a></li>
+          </ul>
+        </div>
       </div>
     </div>
     <div class="title">
