--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <div class="navbar navbar-custom navbar-fixed-top" role="navigation">
+    <div class="nav navbar navbar-custom navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header"> 
           <p>Vincent Escueta</p>
         </div>
         <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-          <ul class="nav navbar-nav">
+          <ul class="navbar-nav">
             <li class="nav-item"><a href="#about-me">About Me</a></li>
             <li class="nav-item"><a href="#resume">Résumé</a></li>
             <li class="nav-item"><a href="#contact-me">Contact Me</a></li>
