--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <p>Computer Scientist, UC Berkeley EECS Undergrad</p>
       </div>
     </div>
-    <section id="about-me">
+    <section id="about-me" class="container content-section text-center">
      <div class="about-me">
       <h1>About Me</h1>
       <p>Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science and focus on computer graphics and animation. All my technical skills are in my resume below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, growing in my Christian faith, and going on spontaneous adventures.</p>
       </div>
     </section>
-    <section id="resume">
+    <section id="resume" class="container content-section text-center">
       <div class="resume">
         <h1>My Résumé</h1>
         <ul class="nav-tabs">
@@ -42,14 +42,14 @@
         </ul>
       </div>
     </section>
-    <section id="contact-me">
+    <section id="contact-me" class="container content-section text-center">
       <div class="contact-me">
         <h1>Contact Me</h1>
         <ul class="nav-tabs">
-          <li class="nav-item"><a href="vincent.escueta22@berkeley.edu">Email</a></li>
-          <li class="nav-item"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic">LinkedIn</a></li>
-          <li class="nav-item"><a href="https://github.com/vincent-escueta22">GitHub</a></li>
-          <li class="nav-item"><a href="https://www.facebook.com/vincent.escueta22">Facebook</a></li>
+          <li class="nav-item"><a href="vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;">/a></li>
+          <li class="nav-item"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic"><img src="linkedin.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></li>
+          <li class="nav-item"><a href="https://github.com/vincent-escueta22"><img src="GitHub.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></li>
+          <li class="nav-item"><a href="https://www.facebook.com/vincent.escueta22"><img src="facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></li>
         </ul>
         <p>Last Edited: January 18, 2016 9:35pm</p>
       </div>
