--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
       <div class="contact-me">
         <h1>Contact Me</h1>
         <ul class="nav-tabs">
-          <li class="nav-item"><a href="vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></li>
-          <li class="nav-item"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic"><img src="linkedin.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></li>
-          <li class="nav-item"><a href="https://github.com/vincent-escueta22"><img src="GitHub.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></li>
-          <li class="nav-item"><a href="https://www.facebook.com/vincent.escueta22"><img src="facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></li>
+          <li class="nav-item"><button type="button" class="btn btn-primary btn-md"><a href="vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button></li>
+          <li class="nav-item"><button type="button" class="btn btn-primary btn-md"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic"><img src="linkedin.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button></li>
+          <li class="nav-item"><button type="button" class="btn btn-primary btn-md"><a href="https://github.com/vincent-escueta22"><img src="GitHub.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a><</button>/li>
+          <li class="nav-item"><button type="button" class="btn btn-primary btn-md"><a href="https://www.facebook.com/vincent.escueta22"><img src="facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button></li>
         </ul>
         <p>Last Edited: January 18, 2016 9:35pm</p>
       </div>
