new website, new me

--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
           <li class="nav-item"><button type="button" class="btn btn-primary btn-xs"><a href="https://github.com/vincent-escueta22"><img src="GitHub.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button></li>
           <li class="nav-item"><button type="button" class="btn btn-primary btn-xs"><a href="https://www.facebook.com/vincent.escueta22"><img src="facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button></li>
         </ul>
-        <p>Last Edited: January 18, 2016 9:35pm</p>
       </div>
+    </section>
+    <section id="contact-me" class="container content-section text-center">
+      <p>Last Edited: January 18, 2016 9:35pm</p>
     </section>
 <!-- <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="319.33" height="379.33"> </p> -->
   </body>
