--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
     </section>
     <section id="contact-me" class="container content-section text-center">
-      <div class="contact-me">
+      <div class="contact-me" align="center">
         <h1>Contact Me</h1>
         <ul class="nav-tabs">
           <li class="nav-item"><button type="button" class="btn btn-primary btn-xs"><a href="vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button></li>
@@ -54,7 +54,7 @@
       </div>
     </section>
     <section id="contact-me" class="container content-section text-center">
-      <p>Last Edited: January 18, 2016 9:35pm</p>
+      <p>Last Edited: January 18, 2016</p>
     </section>
 <!-- <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="319.33" height="379.33"> </p> -->
   </body>
