--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       </div>
     </section>
     <section id="contact-me" class="container content-section text-center">
-      <div class="contact-me" align="center">
+      <div class="contact-me">
         <h1>Contact Me</h1>
-        <ul class="nav-tabs">
+        <ul class="nav-tabs" align="center">
           <li class="nav-item"><button type="button" class="btn btn-primary btn-xs"><a href="vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button></li>
           <li class="nav-item"><button type="button" class="btn btn-primary btn-xs"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic"><img src="linkedin.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button></li>
           <li class="nav-item"><button type="button" class="btn btn-primary btn-xs"><a href="https://github.com/vincent-escueta22"><img src="GitHub.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button></li>
