--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="resume">
         <h1>My Résumé</h1>
         <ul class="nav-tabs">
-          <li class="nav-item">"><button type="button" class="btn btn-link btn-lg"><a href="Vincent_Escueta_resume.pdf"><span class="glyphicon glyphicon-download"aria-hidden="true"></span>Download</a></button></li>
+          <li class="nav-item"><a><button type="button" class="btn btn-secondary btn-lg"><a href="Vincent_Escueta_resume.pdf"><span class="glyphicon glyphicon-download"aria-hidden="true"></span>Download</a></button></li>
         </ul>
       </div>
     </section>
