new website, new me

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
         </div>
       </div>
     </div>
-    <div class="title">
-      <div class="container">
-        <h1>Vincent Escueta</h1>
-        <p>Computer Scientist, UC Berkeley EECS Undergrad</p>
+    <header class="title">
+      <div class="title-body">
+        <div class="container">
+          <h1>Vincent Escueta</h1>
+          <p>Computer Scientist, UC Berkeley EECS Undergrad</p>
+        </div>
       </div>
-    </div>
+    </header>
     <section id="about-me" class="container content-section text-center">
      <div class="about-me">
       <h1>About Me</h1>
