new website, new me

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
       <div class="title-body">
         <div class="container">
           <h1>Vincent Escueta</h1>
-          <p>Computer Scientist, UC Berkeley EECS Undergrad</p>
+          <p> UC Berkeley EECS Undergrad</p>
         </div>
       </div>
     </header>
-    <section id="about-me" class="container content-section text-center">
+    <!-- <section id="about-me" class="container content-section text-center">
      <div class="about-me">
       <h1>About Me</h1>
       <p>Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science and focus on computer graphics and animation. All my technical skills are in my resume below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, growing in my Christian faith, and going on spontaneous adventures.</p>
@@ -54,7 +54,7 @@
     </section>
     <section id="contact-me" class="container content-section text-center">
       <p>Last Edited: January 18, 2016</p>
-    </section>
+    </section> -->
 <!-- <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="319.33" height="379.33"> </p> -->
   </body>
 </html>
