new website, new me

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
             <h1>Vincent Escueta</h1>
-            <p>UC Berkeley EECS Undergrad,<br/></p>
+            <p>UC Berkeley EECS Undergrad<br/><a href="http://vincent-escueta22.github.io/About-Me/">ARead more about me</a></p>
           </div>
         </div>
       </div>
