new website, new me

--- a/About-Me.html
+++ b/About-Me.html
@@ -16,15 +16,15 @@
         <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
           <ul class="navbar-nav">
             <li class="nav-item"><a href="http://vincent-escueta22.github.io/Website/">Home</a></li>
-            <li class="nav-item"><a href="http://vincent-escueta22.github.io/About-Me/">About Me</a></li>
+            <li class="nav-item"><a href="About-Me.html">About Me</a></li>
             <li class="nav-item"><a href="http://vincent-escueta22.github.io/Resume/">Résumé</a></li>
             <li class="nav-item"><a href="http://vincent-escueta22.github.io/Contact-Me">Contact Me</a></li>
           </ul>
         </div>
       </div>
     </div>
-    <header class="title text-center">
-      <div class="title-body">
+    <header class="about-me text-center">
+      <div class="about-me-body">
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
             <h1>About Me</h1>
