--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
           <ul class="navbar-nav">
             <li class="nav-item"><a href="http://vincent-escueta22.github.io/Website/">Home</a></li>
-            <li class="nav-item"><a href="http://vincent-escueta22.github.io/About-Me/">About Me</a></li>
-            <li class="nav-item"><a href="http://vincent-escueta22.github.io/Resume/">Résumé</a></li>
-            <li class="nav-item"><a href="http://vincent-escueta22.github.io/Contact-Me">Contact Me</a></li>
+            <li class="nav-item"><a href="About-Me.html">About Me</a></li>
+            <li class="nav-item"><a href="Resume.html">Résumé</a></li>
+            <li class="nav-item"><a href="Contact-Me.html">Contact Me</a></li>
           </ul>
         </div>
       </div>
@@ -28,7 +28,7 @@
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
             <h1>Vincent Escueta</h1>
-            <p>UC Berkeley EECS Undergrad<br/> <a href="http://vincent-escueta22.github.io/About-Me/">Read more about me</a></p>
+            <p>UC Berkeley EECS Undergrad<br/> <a href="About-Me.html">Read more about me</a></p>
           </div>
         </div>
       </div>
