new website, new me

--- a/Resume.html
+++ b/Resume.html
@@ -23,14 +23,13 @@
         </div>
       </div>
     </div>
-    <header class="about-me text-center">
-      <div class="about-me-body">
+    <header class="resume text-center">
+      <div class="resume-body">
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
-            <h1>About Me</h1>
-            <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="159.67" height="189.67">
-            <p>Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science and focus on computer graphics and animation. All my technical skills are in my resume which is in the link below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, growing in my Christian faith, and going on spontaneous adventures.<br/>
-            <a href="Resume.html">Check out my Résumé</a></p>
+            <h1>My Résumé</h1>
+              <p><a href="Vincent_Escueta_resume.pdf"><button type="button" class="btn btn-secondary btn-lg"><span class="glyphicon glyphicon-download"aria-hidden="true"></span>Download</button></a><br/>
+              <a href="Contact-Me.html">Want to Contact me? Click Here</p>
           </div>
         </div>
       </div>
