--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -23,14 +23,15 @@
         </div>
       </div>
     </div>
-    <header class="about-me text-center">
-      <div class="about-me-body">
+    <header class="contact-me text-center">
+      <div class="contact-me-body">
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
-            <h1>About Me</h1>
-            <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="159.67" height="189.67">
-            <p>Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science and focus on computer graphics and animation. All my technical skills are in my resume which is in the link below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, growing in my Christian faith, and going on spontaneous adventures.<br/>
-            <a href="Resume.html">Check out my Résumé</a></p>
+            <h1>Contact Me</h1>
+              <p><button type="button" class="btn btn-link btn-xs"><a href="vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
+              <button type="button" class="btn btn-link btn-xs"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic"><img src="linkedin.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
+              <button type="button" class="btn btn-link btn-xs"><a href="https://github.com/vincent-escueta22"><img src="GitHub.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
+              <button type="button" class="btn btn-link btn-xs"><a href="https://www.facebook.com/vincent.escueta22"><img src="facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
           </div>
         </div>
       </div>
