new website, new me

--- a/About-Me.html
+++ b/About-Me.html
@@ -26,7 +26,7 @@
     <header class="about-me text-center">
       <div class="about-me-picture">
         <div class="col-md-6">
-          <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="159.67" height="189.67">
+          <p><img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="159.67" height="189.67"></p>
         </div>
       </div>
       <div class="about-me-body">
