new website, new me

--- a/About-Me.html
+++ b/About-Me.html
@@ -23,12 +23,12 @@
         </div>
       </div>
     </div>
-    <header class="about-me text-center">
+    <header class="about-me text-center row">
       <div class="about-me-picture">
         <div class="container">
           <div class="col-md-6">
             <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="159.67" height="189.67">
-          <div class="container">
+          </div>
         </div>
       </div>
       <div class="about-me-body">
