new website, new me

--- a/About-Me.html
+++ b/About-Me.html
@@ -35,7 +35,7 @@
             <div class="col-md-8">
               <h1>About Me</h1>
               <p>Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science to focus on computer graphics and animation. All my technical skills are in my resume which is in the link below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures.<br/>
-              <button type="button" class="btn btn-default btn-lg"><a href="Resume.html">Check out my Résumé</a></button></p>
+              <button type="button" class="btn btn-default btn-md"><a href="Resume.html">Check out my Résumé</a></button></p>
           </div>
         </div>
       </div>
