new website, new me

--- a/About-Me.html
+++ b/About-Me.html
@@ -28,7 +28,7 @@
       <div class="row">
         <div class="about-me-picture text-right">
             <div class="col-md-5">
-              <img class="img-circle" src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="243.5" height="284.5">
+              <img class="img-circle" src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true">
             </div>
         </div>
         <div class="about-me-body text-center">
