new website, new me

--- a/About-Me.html
+++ b/About-Me.html
@@ -41,13 +41,13 @@
       </div>
      </div>
     </header>
-    <!-- <section id="about-me" class="container content-section text-center">
+    <section id="about-me" class="container content-section text-center">
      <div class="about-me">
       <h1>About Me</h1>
       <p>Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science and focus on computer graphics and animation. All my technical skills are in my resume below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, growing in my Christian faith, and going on spontaneous adventures.</p>
       </div>
     </section>
-    <section id="resume" class="container content-section text-center">
+   <!--  <section id="resume" class="container content-section text-center">
       <div class="resume">
         <h1>My Résumé</h1>
         <p><a href="Vincent_Escueta_resume.pdf"><button type="button" class="btn btn-secondary btn-lg"><span class="glyphicon glyphicon-download"aria-hidden="true"></span>Download</button></a></p>
