new website, new me

--- a/index.html
+++ b/index.html
@@ -51,6 +51,30 @@
       </div>
      </div>
     </header>
+    <header class="resume text-center">
+      <div class="resume-body">
+        <div class="container">
+          <div class="col-md-8 col-md-offset-2">
+            <h1>My Résumé</h1>
+              <p><a href="Vincent_Escueta_resume.pdf"><button type="button" class="btn btn-secondary btn-lg"><span class="glyphicon glyphicon-download"aria-hidden="true"></span>Download</button></a><br/>
+              <a href="Contact-Me.html">Want to Contact me? Click Here</p>
+          </div>
+        </div>
+      </div>
+    </header>
+    <header class="contact-me text-center">
+      <div class="contact-me-body">
+        <div class="container">
+          <div class="col-md-5 col-md-offset-1">
+            <h1>Contact Me</h1>
+              <p><button type="button" class="btn btn-link btn-xs"><a href="mailto:vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
+              <button type="button" class="btn btn-link btn-xs"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic"><img src="linkedin.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
+              <button type="button" class="btn btn-link btn-xs"><a href="https://github.com/vincent-escueta22"><img src="GitHub.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
+              <button type="button" class="btn btn-link btn-xs"><a href="https://www.facebook.com/vincent.escueta22"><img src="facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
+          </div>
+        </div>
+      </div>
+    </header>
     <!-- <section id="about-me" class="container content-section text-center">
      <div class="about-me">
       <h1>About Me</h1>
