new website, new me

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
             <h1>Vincent Escueta</h1>
-            <p>UC Berkeley EECS Undergrad<br/> <a href="About-Me.html">Read more about me</a></p>
+            <p>UC Berkeley EECS Undergrad<br/> <a href="#about-me">Read more about me</a></p>
           </div>
         </div>
       </div>
@@ -45,7 +45,7 @@
             <div class="col-md-6">
               <h1>About Me</h1>
               <p>Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science to focus on computer graphics and animation. All my technical skills are in my resume which is in the link below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures.<br/>
-              <a href="Resume.html">Check out my Résumé</a></p>
+              <a href="#resume">Check out my Résumé</a></p>
           </div>
         </div>
       </div>
@@ -57,7 +57,7 @@
           <div class="col-md-8 col-md-offset-2">
             <h1>My Résumé</h1>
               <p><a href="Vincent_Escueta_resume.pdf"><button type="button" class="btn btn-secondary btn-lg"><span class="glyphicon glyphicon-download"aria-hidden="true"></span>Download</button></a><br/>
-              <a href="Contact-Me.html">Want to Contact me? Click Here</p>
+              <a href="#contact-me">Want to Contact me? Click Here</p>
           </div>
         </div>
       </div>
