new website, new me

--- a/index.html
+++ b/index.html
@@ -34,22 +34,24 @@
       </div>
     </header>
     <header class="about-me">
-     <div class="container" id="about-me">
-      <div class="row">
-        <div class="about-me-picture text-right">
-            <div class="col-md-5">
-              <img class="img-circle" src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true">
+      <div class "about-me-body" id="resume">
+       <div class="container">
+        <div class="row">
+          <div class="about-me-picture text-right">
+              <div class="col-md-5">
+                <img class="img-circle" src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true">
+              </div>
+          </div>
+          <div class="about-me-body text-center">
+              <div class="col-md-6">
+                <h1>About Me</h1>
+                <p>Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science to focus on computer graphics and animation. All my technical skills are in my resume which is in the link below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures.<br/>
+                <a href="#resume">Check out my Résumé</a></p>
             </div>
-        </div>
-        <div class="about-me-body text-center">
-            <div class="col-md-6">
-              <h1>About Me</h1>
-              <p>Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science to focus on computer graphics and animation. All my technical skills are in my resume which is in the link below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures.<br/>
-              <a href="#resume">Check out my Résumé</a></p>
           </div>
         </div>
+       </div>
       </div>
-     </div>
     </header>
     <header class="resume text-center">
       <div class="resume-body" id="resume">
