new website, new me

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <header class="contact-me text-center">
       <div class="contact-me-body" id="contact-me">
         <div class="container">
-          <div class="col-md-5 col-md-offset-2">
+          <div class="col-md-5 col-sm-offset-2">
             <h1>Contact Me</h1>
               <p><button type="button" class="btn btn-link btn-xs"><a href="mailto:vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
               <button type="button" class="btn btn-link btn-xs"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic"><img src="linkedin.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
