new website, new me

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           <div class="about-me-body text-center">
               <div class="col-md-6">
                 <h1>About Me</h1>
-                <p>Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science to focus on computer graphics and animation. All my technical skills are in my resume which is in the link below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures.<br/>
-                <a href="#resume">Check out my Résumé</a></p>
+                <p>Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science to focus on computer graphics and animation. All my technical skills are in my resume in the section below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures.<br/>
+                
             </div>
           </div>
         </div>
@@ -67,7 +67,7 @@
     <header class="contact-me text-center">
       <div class="contact-me-body" id="contact-me">
         <div class="container">
-          <div class="col-md-5 col-sm-offset-2">
+          <div class="col-md-5 col-md-offset-1">
             <h1>Contact Me</h1>
               <p><button type="button" class="btn btn-link btn-xs"><a href="mailto:vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
               <button type="button" class="btn btn-link btn-xs"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic"><img src="linkedin.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
