--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="about-me-body text-center">
               <div class="col-md-6">
                 <h1>About Me</h1>
-                <p>Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science to focus on computer graphics and animation. All my technical skills are in my resume in the section below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures.</p>
+                <p>Hi! I am Vincent Escueta from Diamond Bar, California and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science to focus on computer graphics and animation. All my technical skills are in my resume in the section below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures.</p>
                 
             </div>
           </div>
