adding bar at bottom

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
           </div>
           <div class="col-md-4">
             <div class="thumbnail">
-          <a href="#about-me"><img src="Vincent_Escueta_resume.png"></a>
+          <a href="#resume">Check out my Résumé</a>
           </div>
           </div>
           <div class="col-md-4">
             <div class="thumbnail">
-          <a href="#about-me">See how to contact me</a>
+          <a href="#contact-me">See how to contact me</a>
             </div>
           </div>
         </div>
