--- a/index.html
+++ b/index.html
@@ -28,29 +28,19 @@
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
             <h1>Vincent Escueta</h1>
-            <p>UC Berkeley EECS Undergrad<br/> <a href="#about-me">Read more about me</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="title-links">
-        <div class="container">
-          <div class="col-md-4">
-            <div class="thumbnail">
-          <a href="#about-me">Read more about me</a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="thumbnail">
-          <a href="#resume">Check out my Résumé</a>
-          </div>
-          </div>
-          <div class="col-md-4">
-            <div class="thumbnail">
-          <a href="#contact-me">See how to contact me</a>
+            <p>UC Berkeley EECS Undergrad</p>
+             <div class="title-links">
+              <div class="container">
+                <ul>
+                    <li class="nav-item"><button type="button" class="btn btn-success btn-lg"><a href="#about-me">Read more about me</a></button></li>
+                    <li class="nav-item"><button type="button" class="btn btn-success btn-lg"><a href="#resume">Check out my Résumé</a></button></li>
+                    <li class="nav-item"><button type="button" class="btn btn-success btn-lg"><a href="#contact-me">See how to contact me</a></button></li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      </div
     </header>
     <header class="about-me">
       <div class "about-me-body" id="about-me">
@@ -77,7 +67,7 @@
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
             <h1>My Résumé</h1>
-              <p><a href="Vincent_Escueta_resume.pdf"><button type="button" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-download"aria-hidden="true"></span>Download</button></a></p>
+              <p><a href="Vincent_Escueta_resume.pdf"><button type="button" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-download"aria-hidden="true"></span> Download</button></a></p>
           </div>
         </div>
       </div>
