--- a/index.html
+++ b/index.html
@@ -28,19 +28,17 @@
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
             <h1>Vincent Escueta</h1>
-            <p>UC Berkeley EECS Undergrad</p>
+            <p>UC Berkeley EECS Undergrad<br/> <a href="#about-me">Read more about me</a></p>
              <div class="title-links">
               <div class="container">
-                <ul>
-                    <li class="nav-item"><button type="button" class="btn btn-success btn-lg"><a href="#about-me">Read more about me</a></button></li>
-                    <li class="nav-item"><button type="button" class="btn btn-success btn-lg"><a href="#resume">Check out my Résumé</a></button></li>
-                    <li class="nav-item"><button type="button" class="btn btn-success btn-lg"><a href="#contact-me">See how to contact me</a></button></li>
-                </ul>
+                <p><button type="button" class="btn btn-success btn-lg"><a href="#about-me">Read more about me</a></button>
+                <button type="button" class="btn btn-success btn-lg"><a href="#resume">Check out my Résumé</a></button>
+                <button type="button" class="btn btn-success btn-lg"><a href="#contact-me">See how to contact me</a></button></p>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </div
     </header>
     <header class="about-me">
       <div class "about-me-body" id="about-me">
